--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ lerna-debug.log
 # vs editor related files
 .vscode-test
 .vscode
+*.map
+*.js
+/DIUSShoping/bin
+/DIUSShoping/obj
+/DIUSShoping/.vs
