--- a/DIUSShopping/package.json
+++ b/DIUSShopping/package.json
@@ -8,10 +8,12 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
+    "jest": "^28.0.3",
     "typescript": "^4.0.5"
   }
 }
