--- a/DIUSShopping/package.json
+++ b/DIUSShopping/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^14.14.7",
     "jest": "^28.0.3",
     "typescript": "^4.0.5"
