--- a/DIUSShopping/package.json
+++ b/DIUSShopping/package.json
@@ -12,8 +12,12 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.14.7",
+    "babel-jest": "^28.0.3",
     "jest": "^28.0.3",
     "typescript": "^4.0.5"
   }
